src/QPainter.h


// 
// This file has been automatically generated by RaQt_maker V0.0.7.
// To modify and regenerate it, see the source code available here: 
//         https://github.com/yguillemot/RaQt_maker
// 

#include <stdint.h>
#include <QtWidgets>
#include "externc.h"

EXTERNC void * QWQPainterCtor_1();
EXTERNC void * SCWQPainterCtor_1();

EXTERNC void * QWQPainterCtor_QWidget(void * arg1);
EXTERNC void * QWQPainterCtor_QImage(void * arg1);

EXTERNC int8_t QWQPainterbegin_null(void * obj);
EXTERNC int8_t QWQPainterbegin_QWidget(void * obj, void * arg1);
EXTERNC int8_t QWQPainterbegin_QImage(void * obj, void * arg1);
EXTERNC int8_t QWQPainterend(void * obj);
EXTERNC void QWQPaintersetFont(void * obj, void * f);
EXTERNC void QWQPaintersetPen_1(void * obj, void * color);
EXTERNC void QWQPaintersetPen_2(void * obj, void * pen);
EXTERNC void QWQPaintersetPen_3(void * obj, int  style);
EXTERNC void QWQPaintersetBrush_1(void * obj, void * brush);
EXTERNC void QWQPaintersave(void * obj);
EXTERNC void QWQPainterrestore(void * obj);
EXTERNC void QWQPainterdrawLine_3(void * obj, int32_t  x1, int32_t  y1, int32_t  x2, int32_t  y2);
EXTERNC void QWQPainterdrawRect_2(void * obj, int32_t  x1, int32_t  y1, int32_t  w, int32_t  h);
EXTERNC void QWQPainterdrawRect_3(void * obj, void * rect);
EXTERNC void QWQPainterdrawEllipse_3(void * obj, int32_t  x, int32_t  y, int32_t  w, int32_t  h);
EXTERNC void QWQPainterdrawText_3(void * obj, int32_t  x, int32_t  y, char * s);
EXTERNC void QWQPainterdrawText_6(void * obj, void * r, int32_t  flags, char * text, void * br);
EXTERNC void * QWQPainterboundingRect_2(void * obj, void * rect, int32_t  flags, char * text);
EXTERNC void * QWQPainterboundingRect_3(void * obj, int32_t  x, int32_t  y, int32_t  w, int32_t  h, int32_t  flags, char * text);
EXTERNC void QWvalidateCB_QPainter(void *obj, int32_t objId, char *methodName);
EXTERNC void QWQPainterDtor(void *);
EXTERNC void SCWQPainterDtor(void *);